--- a/hello.html
+++ b/hello.html
@@ -6,9 +6,8 @@
   <title>The HTML5 Herald</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
 </head>
 <body>
-  <script src="js/scripts.js"></script>
+  <p>The test page set from git web interface</p>
 </body>
 </html>
