--- a/hello.html
+++ b/hello.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <p>The test page set from git web interface</p>
+  <p>Adde this line again from web but b4 pulling from git</p>
 </body>
 </html>
