added message from git locally but there is merge conflict

--- a/hello.html
+++ b/hello.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <p>The test page set from git web interface</p>
+  <P>I edited this one form atom editor the third time</p>
 </body>
 </html>
