--- a/hello.html
+++ b/hello.html
@@ -10,5 +10,6 @@
 <body>
   <p>The test page set from git web interface</p>
   <P>I edited this one form atom editor the third time</p>
+   <P>I edited this one form web and want to merge  all</p>
 </body>
 </html>
