added message from branch 2

--- a/hello.html
+++ b/hello.html
@@ -13,5 +13,6 @@
   <p>Adde this line again from atom editor but b4 pulling from git and merging the two</p>
     <p>Merge all from remote and locally</p>
   <p>Git web page edited to cause conflict</p>
+  <p>edits from brach 2</p>
 </body>
 </html>
